syntax = "proto3";
import "xmlcall.proto";

package main;
option java_package = "com.luxoft.uhg.fabric.proto";


message MapValue
{
    string mapValueValue = 1;
}

enum MYENUM
{
    OPT0 = 0;
    OPTA = 1;
    OPTB = 2;
}

message TestMessage
{
    message NestedMessage
    {
        int32 a = 1;
    }

    enum NestedEnum
    {
        OPT0 = 0;
        OPT1 = 1;
    }

    map<int32, int32> intMap = 1;
    map<string, MapValue>  msgMap = 2;
    repeated string arr = 3;
    bytes b = 4;
    string s = 5;
    int32 x = 6;
    MYENUM e = 7;

    oneof test_oneof {
        string name = 8;
        MapValue sub_message = 9;
    }

    NestedMessage nested = 10;
    NestedEnum nestedEnum = 11;
}

service TestService {
    rpc main(TestMessage) returns(TestMessage) {option(xmlcall.exec_type) = QUERY; }
}

